<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PinGo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="manage_address">我的地址</string>
    <string name="new_address">新增地址</string>
    <string name="save">保存</string>
    <string name="receiver">收货人:</string>
    <string name="receiver_name">请输入收货人姓名</string>
    <string name="phone">电    话:</string>
    <string name="phone_number_des">11位手机号</string>
    <string name="address_info">地    址:</string>
    <string name="detail_address">详细地址</string>
    <string name="detail_address_des">街道门牌信息</string>
    <string name="zip_code">邮政编码</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">找不到服务器君</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <string-array name="province_item">
        <item>湖北省</item>
    </string-array>
    <string-array name="hubei_province_item">
        <item>华中科技大学</item>
    </string-array>
    <string-array name="hunan_province_item">
        <item>中南大学</item>
    </string-array>
    <!-- 建筑-->
    <string-array name="wuda_school_item">
        <item>计算机学院</item>
    </string-array>
    <string-array name="huake_school_item">
		<item>紫松教师公寓A栋</item>
		<item>紫松教师公寓B栋</item>
		<item>紫松教师公寓C栋</item>
		<item>紫松教师公寓D栋</item>
		<item>紫松1栋</item>
		<item>紫松2栋</item>
		<item>紫松3栋</item>
		<item>紫松4栋</item>
		<item>紫松5栋</item>
		<item>紫松6栋</item>
		<item>紫松7栋</item>
		<item>紫松8栋</item>
		<item>紫松9栋</item>
		<item>紫松10栋</item>
		<item>紫松11栋</item>
		<item>紫松12栋</item>
		<item>紫松13栋</item>
		<item>西一舍</item>
		<item>西二舍</item>
		<item>西三舍</item>
		<item>西四舍</item>
		<item>西五舍</item>
		<item>西六舍</item>
		<item>西七舍</item>
		<item>西八舍</item>
		<item>西九舍</item>
		<item>西十舍</item>
		<item>西十一舍</item>
		<item>西十二舍</item>
		<item>西十三舍</item>
		<item>西一楼</item>
		<item>西二楼</item>
		<item>西三楼</item>
		<item>西四楼</item>
		<item>西五楼</item>
		<item>西六楼</item>
		<item>西七楼</item>
		<item>西八楼</item>
		<item>西九楼</item>
		<item>西十楼</item>
		<item>西十一楼</item>
		<item>西十二楼</item>
		<item>南一楼</item>
		<item>南二楼</item>
		<item>南三楼</item>
		<item>南四楼</item>
		<item>南五楼</item>
		<item>南六楼</item>
		<item>东一楼</item>
		<item>东二楼</item>
		<item>东三楼</item>
		<item>东四楼</item>
		<item>东五楼</item>
		<item>东六楼</item>
		<item>东七楼</item>
		<item>东八楼</item>
		<item>东九楼</item>
		<item>东十楼</item>
		<item>东十一楼</item>
		<item>东十二楼</item>
		<item>韵苑1栋</item>
		<item>韵苑2栋</item>
		<item>韵苑3栋</item>
		<item>韵苑4栋</item>
		<item>韵苑5栋</item>
		<item>韵苑6栋</item>
		<item>韵苑7栋</item>
		<item>韵苑8栋</item>
		<item>韵苑9栋</item>
		<item>韵苑10栋</item>
		<item>韵苑11栋</item>
		<item>韵苑12栋</item>
		<item>韵苑13栋</item>
		<item>韵苑14栋</item>
		<item>韵苑15栋</item>
		<item>韵苑16栋</item>
		<item>韵苑17栋</item>
		<item>韵苑18栋</item>
		<item>韵苑19栋</item>
		<item>韵苑20栋</item>
		<item>韵苑21栋</item>
		<item>韵苑22栋</item>
		<item>韵苑23栋</item>
		<item>韵苑24栋</item>
		<item>韵苑25栋</item>
		<item>韵苑26栋</item>
		<item>韵苑27栋</item>
		<item>东一舍</item>
		<item>东二舍</item>
		<item>东三舍</item>
		<item>东四舍</item>
		<item>东五舍</item>
		<item>东六舍</item>
		<item>东七舍</item>
		<item>东八舍</item>
		<item>东九舍</item>
		<item>沁苑1栋</item>
		<item>沁苑2栋</item>
		<item>沁苑3栋</item>
		<item>沁苑4栋</item>
		<item>沁苑5栋</item>
		<item>南一舍</item>
		<item>南二舍</item>
		<item>南三舍</item>
		<item>通信与探测研究所</item>
		<item>热态实验室</item>
		<item>煤燃烧国家重点实验室</item>
		<item>音乐中心</item>
		<item>图书馆</item>
		<item>东校区图书馆</item>
		<item>逸夫科技楼</item>
		<item>机械楼</item>
		<item>动力楼</item>
		<item>化学楼</item>
		<item>管理学院</item>
		<item>经济学院</item>
		<item>公共管理学院</item>
		<item>水电与数字化工程</item>
		<item>环境科学与与工程学院</item>
		<item>软件学院</item>
		<item>教育科学研究院</item>
		<item>国际教育学院</item>
		<item>远程与继续教育学院</item>
   	</string-array>
</resources>
