<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <include
		android:id="@+id/common_top"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		layout="@layout/common_top"/>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/common_top"
        android:layout_height="wrap_content"
        android:orientation="vertical">"
    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="15dp"
        android:background="@color/divide_line" />

    <RelativeLayout
        android:id="@+id/view_address_reveiver"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:clickable="true" >

        <ImageView
            android:id="@+id/profile_address_receiver_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:padding="@dimen/margin_medium"
            android:src="@drawable/icon_receiver" />

        <TextView
            android:id="@+id/profile_address_receiver_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/profile_address_receiver_img"
            android:text="@string/receiver"
            android:textColor="@color/font_color_primary"
            android:textSize="@dimen/font_size_large" />

        <EditText
            android:id="@+id/profile_address_receiver_editText"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/profile_address_receiver_edit_img"
            android:layout_toRightOf="@+id/profile_address_receiver_img"
            android:background="@null"
            android:ems="10"
            android:hint="@string/receiver_name"
            android:textSize="14sp" >

            <requestFocus />
        </EditText>

        <ImageView
            android:id="@+id/profile_address_receiver_edit_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dip"
            android:contentDescription="@null"
            android:src="@drawable/icon_edit" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:background="@color/divide_line" />

    <RelativeLayout
        android:id="@+id/view_address_phone"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:clickable="true" >

        <ImageView
            android:id="@+id/profile_address_phone_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:padding="@dimen/margin_medium"
            android:src="@drawable/icon_phone" />

        <TextView
            android:id="@+id/profile_address_phone_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/profile_address_phone_img"
            android:text="@string/phone"
            android:textColor="@color/font_color_primary"
            android:textSize="@dimen/font_size_large" />

        <EditText
            android:id="@+id/profile_address_phone_editText"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="100dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/phone_number_des"
            android:inputType="phone"
            android:maxLength="11"
            android:textSize="14sp" >
        </EditText>

        <ImageView
            android:id="@+id/profile_address_phone_edit_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dip"
            android:contentDescription="@null"
            android:src="@drawable/icon_edit" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:background="@color/divide_line" />

    <RelativeLayout
        android:id="@+id/view_address_school"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_white_list_selector"
        android:onClick="getProvinceSchoolZone"
        android:clickable="true" >

        <ImageView
            android:id="@+id/profile_address_school_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:padding="@dimen/margin_medium"
            android:src="@drawable/icon_address" />

        <TextView
            android:id="@+id/profile_address_school_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/profile_address_school_img"
            android:text="@string/address_info"
            android:textColor="@color/font_color_primary"
            android:textSize="@dimen/font_size_large" />

        <TextView
            android:id="@+id/profile_address_school_editText"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="100dp"
            android:hint="请选择省份、学校、楼栋"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/profile_address_school_edit_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dip"
            android:contentDescription="@null"
            android:src="@drawable/icon_more" />
    </RelativeLayout>
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal">
	    <View
	        android:layout_width="267dp"
	        android:layout_height="1dp"
	        android:layout_alignParentRight="true"
	        android:background="@color/divide_line" />
	</RelativeLayout>

    <RelativeLayout
        android:id="@+id/view_address_detail"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:clickable="true" >

        <EditText
            android:id="@+id/profile_address_detail_editText"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="100dp"
            android:background="@null"
            android:ems="10"
            android:hint="请填写具体地址"
            android:textSize="14sp" >
        </EditText>

        <ImageView
            android:id="@+id/profile_address_detail_edit_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15.0dip"
            android:contentDescription="@null"
            android:src="@drawable/icon_edit" />
    </RelativeLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/divide_line" />
	</LinearLayout>
	<ImageView
        android:id="@+id/iv_main_bg2"
	    android:layout_width="fill_parent"
	    android:layout_height="10dp"
	    android:layout_below="@id/common_top"
	    android:background="@drawable/activity_main_bg_top2"/>
</RelativeLayout>